fixed all styling for account page

--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,12 @@ body{
 .inputContainer{
     margin: auto;
 }
+
+.tablePrintout{
+    overflow: auto;
+}
+
+.tablePrintout tbody{
+    overflow-y: auto;
+    overflow-x: hidden;
+}
